# CTF-Decoder

./: .gitignore  ADAPTIVE_ENGINE.md  CORE_CONCEPTS.md  README.md  SECURITY.md  SYSTEM_ARCHITECTURE.md  codes.md  pyproject.toml  requirements.txt  test_api.py  test_code_solver.py  test_decoders.py  test_solver.py  train.py  train_ml.py  vercel.json
api/: index.py
ctf_decoder/: registry.py
ctf_decoder/adaptive/: __init__.py  memory.py
ctf_decoder/cli/: main.py
ctf_decoder/core/: bruteforce.py  chain.py  code_solver.py  exceptions.py  pipeline.py  request.py  solver.py
ctf_decoder/decoders/: __init__.py  base.py
ctf_decoder/decoders/archive/: compression.py
ctf_decoder/decoders/binary/: base64_decoder.py  binary_decoder.py  hex_decoder.py  octal_decoder.py
ctf_decoder/decoders/classical/: alphahex_decoder.py  atbash_decoder.py  morse_decoder.py  rot13_decoder.py
ctf_decoder/decoders/crypto/: xor_decoder.py
ctf_decoder/decoders/web/: url_decoder.py
ctf_decoder/detection/: __init__.py  engine.py  entropy.py  fingerprint.py  ml_dataset.py  ml_model.py  pattern.py  scorer.py
ctf_decoder/output/: __init__.py  flag_detector.py  formatter.py  ranker.py
ctf_decoder/plugins/: loader.py
ctf_decoder/web/: __init__.py  app.py
ctf_decoder/web/static/: index.html  style.css
